--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ES5",
+        "target": "es5",
         "module": "amd",
-        "sourceMap": true}
+        "sourceMap": true
+    }
 }
