Final touches to hibernations

--- a/BugetGraph.csproj
+++ b/BugetGraph.csproj
@@ -37,6 +37,7 @@
     <Content Include="README.md" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="todo.txt" />
     <Content Include="tsconfig.json" />
   </ItemGroup>
   <PropertyGroup>
